2000-03-27  Roland McGrath  <roland@baalperazim.frob.com>

	* include/shlib-compat.h: Conditionalize <abi-versions.h> include
	on [HAVE_ELF && DO_VERSIONING].

2000-03-27  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/tst-obprintf.c: New file.

2000-03-26  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (_IO_default_xsputn): Little optimization.  Call
	_IO_OVERFLOW directly instead through __overflow.

	* locale/programs/localedef.c (construct_output_path): If path
	contains a / compute the end of the directory name correctly.

	* include/features.h: Undef and document __USE_XOPEN2K.

	* malloc/mcheck.c: Implement pedantic checking of all allocated blocks
	whenever a function is called.  Initiated by calling mcheck_pedantic
	instead of mcheck.
	* malloc/mcheck.h: Declare mcheck_pedantic.
	* malloc/Versions [libc] (GLIBC_2.2): Add mcheck_pedantic.
	* locale/programs/localdef.c: Use mcheck_pedantic instead of mcheck
	for now.

2000-03-26  Roland McGrath  <roland@baalperazim.frob.com>

	* dlfcn/dlopen.c: Use <shlib-compat.h> macros.
	* dlfcn/dlopenold.c: Likewise.
	* nss/getXXbyYY_r.c: Likewise.
	* nss/getXXent_r.c: Likewise.
	* hurd/hurdinit.c: Likewise.
	* hurd/compat-20.c: Likewise.
	* libio/oldiofopen.c: Likewise.
	* libio/oldiofclose.c: Likewise.
	* libio/oldiofdopen.c: Likewise.
	* libio/oldfileops.c: Likewise.
	* libio/oldstdfiles.c: Likewise.
	* libio/oldiofsetpos.c: Likewise.
	* libio/oldiofgetpos.c: Likewise.
	* libio/oldiofgetpos64.c: Likewise.
	* libio/oldiofsetpos64.c: Likewise.
	* libio/oldiopopen.c: Likewise.
	* libio/oldpclose.c: Likewise.
	* libio/oldtmpfile.c: Likewise.
	* libio/freopen.c (freopen): Likewise.
	* libio/iofclose.c (_IO_new_fclose): Likewise.

	* sysdeps/mach/sys/reboot.h: Include <features.h>.
	(reboot): Declare it.

	* libio/Makefile (headers): Add bits/stdio-lock.h here.

	* sysdeps/mach/hurd/bits/stdio-lock.h: New file.

	* include/shlib-compat.h: Include <abi-versions.h> unconditionally.
