@@ -1,5 +1,7 @@
 2000-03-27  Roland McGrath  <roland@baalperazim.frob.com>
 
+	* stdio-common/tmpfile.c: Use <shlib-compat.h> macros.
+
 	* include/shlib-compat.h: Conditionalize <abi-versions.h> include
 	on [HAVE_ELF && DO_VERSIONING].
 
